--- a/app/src/main/res/layout/activity_traveller_info.xml
+++ b/app/src/main/res/layout/activity_traveller_info.xml
@@ -64,6 +64,7 @@
                 android:padding="16dp">
 
                 <TextView
+                    android:id="@+id/tvCompanyName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Perera Travels"
@@ -72,6 +73,7 @@
                     android:textColor="@color/text_primary" />
 
                 <TextView
+                    android:id="@+id/tvBusType"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="A/C Sleeper (2+2)"
@@ -80,6 +82,7 @@
                     android:layout_marginTop="4dp" />
 
                 <TextView
+                    android:id="@+id/tvDurationTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="9:00 AM - 9:45 AM"
