--- a/app/src/main/res/layout/activity_booking_history.xml
+++ b/app/src/main/res/layout/activity_booking_history.xml
@@ -53,7 +53,7 @@
                     android:layout_weight="1"
                     android:text="Tất cả"
                     android:textSize="12sp"
-                    android:backgroundTint="@color/primary"
+                    android:background="@drawable/bg_filter_button_active"
                     android:textColor="@android:color/white"
                     android:layout_marginEnd="4dp"
                     style="@style/Widget.MaterialComponents.Button" />
@@ -65,11 +65,11 @@
                     android:layout_weight="1"
                     android:text="Đã xác nhận"
                     android:textSize="12sp"
-                    android:backgroundTint="@android:color/transparent"
+                    android:background="@drawable/bg_filter_button_inactive"
                     android:textColor="@color/text_secondary"
                     android:layout_marginStart="4dp"
                     android:layout_marginEnd="4dp"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+                    style="@style/Widget.MaterialComponents.Button" />
 
                 <Button
                     android:id="@+id/btnCancelled"
@@ -78,10 +78,10 @@
                     android:layout_weight="1"
                     android:text="Đã hủy"
                     android:textSize="12sp"
-                    android:backgroundTint="@android:color/transparent"
+                    android:background="@drawable/bg_filter_button_inactive"
                     android:textColor="@color/text_secondary"
                     android:layout_marginStart="4dp"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+                    style="@style/Widget.MaterialComponents.Button" />
 
             </LinearLayout>
 
